# soliton

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
circuits/soliton-pay/: Cargo.toml
circuits/soliton-pay/src/: circuit.rs  lib.rs  poseidon.rs  poseidon_chip.rs  prover.rs  witness.rs
circuits/soliton-pay/tests/: poseidon_equivalence.rs  prove.rs  soliton_accept.rs  specialized_equiv.rs  transfer.rs  transfer_real.rs
circuits/standard-plonk/: Cargo.toml
circuits/standard-plonk/src/: circuit.rs  keccak_be_transcript.rs  lib.rs  prover.rs  shadow.rs
clients/devnet-send/: Cargo.toml
clients/devnet-send/src/: main.rs
clients/soliton-cli/: Cargo.toml
clients/soliton-cli/src/: main.rs
clients/soliton-demo/: Cargo.toml
clients/soliton-demo/src/: main.rs
crates/soliton-poseidon/: Cargo.toml
crates/soliton-poseidon/src/: constants.rs  gen.rs  lib.rs
crates/soliton-sdk/: Cargo.toml
crates/soliton-sdk/src/: encryption.rs  lib.rs  note.rs  tree.rs
crates/soliton-sdk/tests/: encryption.rs  encryption_gate2.rs  mollusk.rs  mollusk_gate4.rs  offchain.rs  offchain_gate3.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: curve.rs  error.rs  field.rs  gate_compat.rs  lib.rs  pairing.rs  proof.rs  syscalls.rs  transcript.rs  vk.rs  vk_generic.rs
crates/verifier/src/kzg/: mod.rs  shplonk.rs
crates/verifier/src/plonk/: generic.rs  lagrange.rs  mod.rs  permutation.rs  proof_reader.rs  verifier.rs
crates/vk-host/: Cargo.toml
crates/vk-host/src/: compile.rs  compile_generic.rs  encode.rs  lib.rs
docs/: SOLITON-spec-v1.0.md
programs/soliton-pool/: Cargo.toml
programs/soliton-pool/src/: entry.rs  lib.rs  state.rs
programs/soliton-pool/tests/: cu_pool.rs
programs/soliton-poseidon-probe/: Cargo.toml
programs/soliton-poseidon-probe/src/: lib.rs
programs/soliton-poseidon-probe/tests/: cu_poseidon.rs
programs/soliton-probe/: Cargo.toml
programs/soliton-probe/src/: lib.rs
programs/soliton-probe/tests/: cu_probe.rs
programs/soliton-verifier/: Cargo.toml
programs/soliton-verifier/src/: lib.rs
programs/soliton-verifier/tests/: cu_accept.rs
programs/verifier-program/: Cargo.toml
programs/verifier-program/src/: lib.rs
programs/verifier-program/tests/: cu_bench.rs
