[package]
name        = "soliton-pay"
version     = "0.1.0"
description = "SOLITON-Pay: real shielded 2-in/2-out payment circuit (halo2 KZG/SHPLONK off-chain prover)"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lib]
name = "soliton_pay"
path = "src/lib.rs"

[dependencies]
halo2_proofs = { workspace = true }
halo2curves  = { workspace = true }

halo2-solana-vk-host = { path = "../../crates/vk-host" }

rand      = "0.8"
rand_core = "0.6"
anyhow    = "1"
sha3      = "0.10"

halo2-solana-verifier = { path = "../../crates/verifier", features = ["std", "solana-syscalls"] }

[features]
# Mirrors halo2_proofs's optional feature so the `#[cfg]` shim is recognized.
circuit-params = []

[dev-dependencies]
halo2_proofs = { workspace = true }
halo2curves  = { workspace = true }
hex          = { workspace = true, features = ["std"] }
ark-bn254    = { workspace = true, features = ["std"] }
ark-ff       = { workspace = true, features = ["std"] }
