[package]
name        = "standard-plonk-circuit"
version     = "0.1.0"
description = "v1 test circuit: a·b + a + b + c + const = instance — PSE Halo2 + Keccak transcript"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[[bin]]
name = "gen-proof"
path = "src/bin/gen_proof.rs"

[lib]
name = "standard_plonk_circuit"
path = "src/lib.rs"

[dependencies]
halo2_proofs  = { workspace = true }
halo2curves   = { workspace = true }

ark-bn254     = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }

halo2-solana-vk-host  = { path = "../../crates/vk-host" }
halo2-solana-verifier = { path = "../../crates/verifier", features = ["std", "solana-syscalls"] }

hex       = { workspace = true, features = ["std"] }
sha3      = "0.10"
rand      = "0.8"
rand_core = "0.6"
anyhow    = "1"

[features]
# Re-enable when investigating SHPLONK / transcript regressions.
debug-trace = ["halo2-solana-verifier/debug-trace"]
# Mirrors halo2_proofs's optional feature; only present so the
# `#[cfg(feature = "circuit-params")]` shim in circuit.rs is recognized
# by `--check-cfg`. Off by default.
circuit-params = []
