[package]
name        = "halo2-solana-vk-host"
version     = "0.1.0"
description = "Off-chain compiler: PSE Halo2 VerifyingKey → on-chain flat VK bytes"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
halo2-solana-verifier = { path = "../verifier", features = ["std"] }

ark-bn254     = { workspace = true, features = ["std"] }
ark-ff        = { workspace = true, features = ["std"] }
ark-ec        = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }
ark-std       = { workspace = true, features = ["std"] }

# halo2 prover dependencies (host-only, fine to use std)
halo2_proofs  = { workspace = true }
halo2curves   = { workspace = true }

hex           = { workspace = true, features = ["std"] }
thiserror     = { workspace = true }
